ObjSpecs/ingress/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
 rules:
  - http:
      paths:
        - path: /app1
          backend:
            serviceName: app1-service
            servicePort: 5678
        - path: /app2
          backend:
            serviceName: app2-service
            servicePort: 5678
